# techfolio

./: .gitignore  README.md
Amazon's TopBooks Reviews:TfidfVec&CountVec/: notebook.ipynb
chatbot_demo/: chatbot_demo.ipynb
google cloud skills boost/improve_data_quality/: pyproject.toml
google cloud skills boost/improve_data_quality/notebooks/: improve_data_quality.html  improve_data_quality.ipynb
pinecone_demo/: pyproject.toml
pinecone_demo/notebooks/: Vector_database_demo_with_Pinecone.ipynb
pyCaret/: pyproject.toml
pyCaret/notebooks/: analyze.ipynb  quickstart_classification.ipynb
sentence_transformers_models/: Training_and_Fine_Tuning_Sentence_Transformers_Models_Notebook_Companion.ipynb  doc2vec_test.ipynb  embedding_non_english_data.ipynb
test/gliner_test/: testing_gliner.ipynb
test/train_and_fine_tune_sentence_transformers_models/: pyproject.toml
test/train_and_fine_tune_sentence_transformers_models/notebooks/: project.ipynb
translation+summarization_demo/: Translation_and_Summarization_Demo.ipynb
youtube-rag/: rag.ipynb
